Update index.html and script.js

--- a/index.html
+++ b/index.html
@@ -11,10 +11,6 @@
 </head>
 
 <body>
-
-
-
-
     <main>
         <img src="./assets/eu.png" alt="Paulo">
         <h1>Paulo Eduardo Konopka</h1>
@@ -289,10 +285,15 @@
                 No entanto, devido à conclusão de seus estudos no ensino médio e ao início de sua jornada na faculdade,
                 Paulo teve que deixar o projeto temporariamente de lado.
                 <br> <br>
-                Atualmente, Paulo está cursando sua educação superior no Centro Universitário UniOpet, onde está
-                estudando
-                para se tornar um Tecnólogo em Análise e Desenvolvimento de Sistemas. Ele está focando seu tempo e
-                determinação no desenvolvimento web, especialmente em seu Projeto Integrador (PI) da faculdade.
+                Paulo começou com a sua educação de ensino superior no Centro Universitário UniOpet, onde estudou
+                durante 2 semestres, infelizmente Paulo se decepcionou com a qualidade do ensino e a infra-estrutura do
+                campus, e decidiu mudar para a Universidade Tuiuti do Paraná, onde atualmente está cursando Análise e
+                Desenvolvimento de Sistemas.
+                Mas apesas dessas decepções, Paulo aproveitou ao máximo seu tempo da UniOpet, aprendendo coisas vitais
+                para sua carreira profissional, como o trabalho em equipe e a interação interpessoal com uma equipe,
+                além de novas tecnologias
+                envolvendo
+                o desenvolvimento web, especialmente em seu Projeto Integrador (PI) da faculdade.
 
                 Por meio desse projeto, Paulo teve seu primeiro contato com uma abordagem mais profissional para o
                 desenvolvimento de sites. Ele se viu enfrentando novos desafios e aprendendo sobre as práticas e
@@ -312,6 +313,10 @@
                 está ansioso para aproveitar ao máximo sua educação superior e adquirir as habilidades necessárias para
                 uma
                 carreira bem-sucedida no campo de Análise e Desenvolvimento de Sistemas.
+
+
+                <br> <br>
+                Atualmente, Paulo está cursando Análise e Desenvolvimentos de Sistemas na Universidade Tuiuti,
                 <br> <br>
 
 
