--- a/index.html
+++ b/index.html
@@ -116,34 +116,35 @@
 
         <div class="container" id="aboutme">
             <h1>Sobre mim</h1>
-            <p>Paulo é autodidata e já dominava diversas áreas da programação antes de iniciar o curso de Análise e
-                Desenvolvimento de Sistemas na Universidade UniOpet, em Curitiba. Dentre o seu nohal de linguagens de
-                programação estão Javascript, NodeJs, Flutter/Dart, HTML e CSS. Além de se manter atualizado nas
-                tendências
-                do
-                mercado de tecnologia e desenvolvimento de sistemas, possui conhecimentos básicos de aporte como as
-                ferramentas do Photoshop, Blender e DaVince. Dentre seus interesses pessoais estão as áreas da física,
-                economia, história e das narrativas mitológicas.</p>
+            <p>Atuo na área de programação há 6 anos, mesmo antes de iniciar o curso de Análise e Desenvolvimento de
+                Sistemas, já despertava em mim um enorme interesse pela área de Desenvolvimento de Sistemas e todas suas
+                multiplicidades. Dentre minhas experiências de linguagens de programação estão: Javascript, NodeJs,
+                Flutter, Dart, HTML, CSS, PhP, MySql, C, C++ e React. Procuro sempre me manter atualizado nas tendências
+                do mercado de tecnologia e
+                desenvolvimento de sistemas, possuo conhecimentos básicos de aporte de ferramentas como Photoshop,
+                Blender, DaVinci, Unity e Figma.
+                Na área pessoal, também me interesso em áreas como física, economia, história e das narrativas
+                mitológicas.</p>
             <br>
-            <p>Desenvolver projetos inovadores perpassam pela importância do trabalho em equipe. Compartilhar
-                conhecimentos é uma das suas softskills de destaque. Acreditar no espírito colaborativo de ponta a
-                ponta,
-                dos clientes aos colaboradores é um diferencial para quem busca proatividade em um projeto focado em
-                soluções criativas.</p>
+
+            <p>Compartilhar conhecimentos é uma das minhas softskills de destaque. Acredito no espírito colaborativo de
+                ponta a ponta dos colaboradores até o cliente. é um diferencial para quem busca proatividade em um
+                projeto focado em soluções criativas.</p>
 
             <br>
+            <p>Dentre minhas características pessoais, me considero proativo, colaborativo, ágil e possuo facilidade em
+                aprender coisas novas assim como executar trabalhos em equipe. </p>
+            <br>
+
             <p>“A tecnologia, assim como toda ferramenta, foi criada com o intuito de facilitar a realização de alguma
                 tarefa. Gosto de levar esse pensamento ao extremo enquanto programo: 'Quais tarefas o cliente precisa
                 realizar?' 'Que tipo de tecnologias podem ser usadas para facilitar essa tarefa?' 'Como deixar essa
-                ferramenta com um fácil acesso para pessoas que não possuem experiência com tecnologia?' São pontos que
-                eu
-                mais penso durante a criação de um sistema. Entendo que, como programadores, podemos ficar animados com
-                uma
-                nova tecnologia, mas se não começarmos pensando pelo lado do cliente, a pessoa do dia a dia que
-                realmente
-                vai usar essa ferramenta, não faremos nada realmente útil para a sociedade. Nem todas as pessoas nascem
-                com
-                conhecimento geral de tecnologia, e são essas as pessoas que precisamos pensar.”</p>
+                ferramenta com fácil acesso para pessoas que não possuem experiência com tecnologia?'. Esses são pontos
+                que eu mais considero durante a criação de um sistema. Entendo que, como programadores, podemos ficar
+                animados com uma nova tecnologia, mas se não levarmos em conta a percepção do cliente (a pessoa que
+                realmente vai usar essa ferramenta), não faremos nada realmente útil para a sociedade, pois nem todas as
+                pessoas nascem com conhecimento geral de tecnologia, e são essas as pessoas em que precisamos pensar.”
+            </p>
 
 
 
