--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="window-body has-space"
                 style=" background: linear-gradient(180deg, rgba(0,164,239,1) 7%, rgba(0,164,239,0.6685049019607843) 19%, rgba(255,255,255,1) 37%); padding:  0px 30px 50px;">
 
-                <p style=" font-size: xx-large; margin: 15px;" class="has-space">Entar no <br>Windows Live
+                <p style=" font-size: xx-large; margin: 15px;" class="has-space">Entrar no <br>Windows Live
                     <strong>Messager</strong>
                 </p>
 
@@ -52,10 +52,10 @@
 
     </main>
 
-    <div id="lockScreen" onclick="changeIt()">
+    <div id="lockScreen" >
         <div style="margin:auto; display:flex; flex-direction:column; justify-content: center; align-items: center;">
 
-            <img src="./assets/lockScreenIcon.png" id="lockScreenPicture" alt="">
+            <img onclick="changeIt()" src="./assets/lockScreenIcon.png" id="lockScreenPicture" alt="">
             <h1 style="color: white;font-size:large; font-weight: 300;">Paulo Eduardo Konopka</h1>
         </div>
     </div>
