--- a/index.html
+++ b/index.html
@@ -12,26 +12,33 @@
 </head>
 
 <body>
-    <main id="mainPage" style="display: none;">
-        <!-- <video id="video" src="./assets/typing.mp3" autoplay></video> -->
-        <div class="window active">
+    <main id="mainPage" style="">
+        <div id="icon" style="top: 10px;"><img src="./assets/trash.png" alt="" srcset="">
+            <p>Lixeira</p>
+        </div>
+        <div id="icon" style="top: 130px;"><img src="./assets/internetExplorer.png" alt="" srcset="">
+            <p>Internet<br> Explorer</p>
+        </div>
+
+        <div onclick="clickMsn()" id="icon" style="top: 270px;"><img src="./assets/msnLogo.png" alt="" srcset="">
+            <p>MSN</p>
+        </div>
+
+        <div class="window active" id="msn" style="display: none;">
             <div class="title-bar">
                 <div class="title-bar-text">Windows Live Message</div>
                 <div class="title-bar-controls">
                     <button aria-label="Minimize"></button>
                     <button aria-label="Maximize"></button>
-                    <button aria-label="Close"></button>
+                    <button onclick="clickMsn()" aria-label="Close"></button>
                 </div>
             </div>
             <div class="window-body has-space"
                 style=" background: linear-gradient(180deg, rgba(0,164,239,1) 7%, rgba(0,164,239,0.6685049019607843) 19%, rgba(255,255,255,1) 37%); padding:  0px 30px 50px;">
-
                 <p style=" font-size: xx-large; margin: 15px;" class="has-space">Entrar no <br>Windows Live
                     <strong>Messager</strong>
                 </p>
-
                 <div id="row">
-
                     <img src="./assets/border.png" alt="login" id="buddyLogin" class="has-space">
                     <div class="field-row column">
                         <input id="text26 email_input" type="email" placeholder="exemplo555@hotmail.com"
@@ -49,12 +56,20 @@
                 </div>
             </div>
         </div>
-
+        <div id="task-bar">
+            <div id="blur-overlay"></div>
+            <div id="menu-button"></div>
+            <div id="pined-items">
+                <div onclick="clickMsn()" id="msnTaskBar" class="pined-icon msnTaskBar"></div>
+            </div>
+            <div id="datetime">
+                <span class="time">09:06 PM</span>
+                <span class="date">08/04/2021</span>
+            </div>
+            <div id="show-desktop"></div>
     </main>
-
-    <div id="lockScreen" >
+    <div id="lockScreen" style="display: none;">
         <div style="margin:auto; display:flex; flex-direction:column; justify-content: center; align-items: center;">
-
             <img onclick="changeIt()" src="./assets/lockScreenIcon.png" id="lockScreenPicture" alt="">
             <h1 style="color: white;font-size:large; font-weight: 300;">Paulo Eduardo Konopka</h1>
         </div>
