--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <main id="mainPage" style="">
+    <main id="mainPage" style="display: none;">
         <div id="icon" style="top: 10px;"><img src="./assets/trash.png" alt="" srcset="">
             <p>Lixeira</p>
         </div>
@@ -68,7 +68,7 @@
             </div>
             <div id="show-desktop"></div>
     </main>
-    <div id="lockScreen" style="display: none;">
+    <div id="lockScreen">
         <div style="margin:auto; display:flex; flex-direction:column; justify-content: center; align-items: center;">
             <img onclick="changeIt()" src="./assets/lockScreenIcon.png" id="lockScreenPicture" alt="">
             <h1 style="color: white;font-size:large; font-weight: 300;">Paulo Eduardo Konopka</h1>
