--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </div>
 
 
-        <div class="window active" id="aboutMeMsn">
+        <div class="window active" id="aboutMeMsn" style="display: none">
             <div class="title-bar">
                 <div class="title-bar-text">Windows Live Message</div>
                 <div class="title-bar-controls">
