--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>PewDizinho</title>
     <script src="./script.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/7.css">
-    <link rel="icon" type="image/png" href="./assets/msnLogo.png" />
+    <link rel="icon" type="image/png" href="./assets/internetExplorer.png" />
     <link rel="stylesheet" href="style.css">
 </head>
 
