--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <link rel="stylesheet" href="https://unpkg.com/7.css">
     <link rel="icon" type="image/png" href="./assets/internetExplorer.png" />
     <link rel="stylesheet" href="style.css">
+
+    <script>
+        if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) window.location.href = "./mobile/index.html";
+    </script>
 </head>
 
 <body>
