--- a/mobile/index.html
+++ b/mobile/index.html
@@ -11,43 +11,39 @@
 <body>
 
     <div class="row">
-
         <div class="cell">
             <p id="time">12:06</p>
-
             <p>Horário</p>
         </div>
 
         <div class="cell">
+            <img id="pfp" src="../assets/mobile/user.png" alt="">
+            <P style="font-size: 27px;">Paulo Konopka</P>
+        </div>
+
+    </div>
+    <div class="row">
+        <div class="cell">
             <img src="../assets/mobile/internet.png" alt="">
             <p>Internet</p>
         </div>
-
-    </div>
-    <div class="row">
-
         <div class="cell">
             <img src="../assets/mobile/github.png" alt="">
             <p>Github</p>
         </div>
 
-        <div class="cell">
-            <img src="../assets/mobile/notepad.png" alt="">
-            <p>Créditos</p>
-        </div>
+
 
     </div>
 
     <div class="row">
-
         <div class="cell">
-            <img src="../assets/mobile/github.png" alt="">
-            <p>Github</p>
+            <img src="../assets/mobile/youtube.png" alt="">
+            <p>youtube</p>
         </div>
-
         <div class="cell">
-            <img src="../assets/mobile/notepad.png" alt="">
-            <p>Créditos</p>
+            <img src="../assets/mobile/linkedinpng.png" alt="">
+            <p>LinkedIn</p>
         </div>
 
     </div>
