--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
 
 
-        <div class="window active fullscreen" id="iexplorer-wiki" style="display: none;">
+        <div class="window active fullscreen has-scrollbar" id="iexplorer-wiki" style="display: none;">
             <div class="title-bar">
                 <div id="row">
                     <div class="title-bar-text"><img src="./assets/internetExplorer.png" alt="icon" id="window-icon"
