--- a/mobile/index.html
+++ b/mobile/index.html
@@ -16,7 +16,8 @@
             <p>Horário</p>
         </div>
 
-        <div class="cell">
+        <div class="cell" onclick="location.href='./profile/index.html'">
+
             <img id="pfp" src="../assets/mobile/user.png" alt="">
             <P style="font-size: 27px;">Paulo Konopka</P>
         </div>
@@ -59,7 +60,6 @@
             <img src="../assets/mobile/notepad.png" alt="">
             <p>Créditos</p>
         </div>
-
     </div>
 
 </body>
