--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 </div>
 
             </ul>
-            <div class="window-body has-space has-scrollbar" style="height: 87%; width:97.5%;">
+            <div class="window-body has-space has-scrollbar" style="height: 87%; width:97.5%; overflow: auto;">
 
                 <div id="row">
                     <img src="./assets//wikipedia.png" id="wikiLogo" alt="wikiLogo">
@@ -170,7 +170,6 @@
                             precisamos
                             pensar.”
                         </p>
-
                     </div>
                     <aside>
                         <p style="font-size: 30px;">Paulo Konopka</p>
@@ -295,6 +294,8 @@
             </div>
             <div id="show-desktop"></div>
         </div>
+
+        <p id="ativarWin">Ativar o Windows<br><span>Esse projeto ainda está em construção</span></p>
     </main>
 
     <div id="lockScreen">
