--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PewDizinho</title>
-    <!-- <script src="./script.js"></script> -->
+    <script src="./script.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/7.css">
     <link rel="icon" type="image/png" href="./assets/internetExplorer.png" />
     <link rel="stylesheet" href="style.css">
@@ -16,21 +16,22 @@
 </head>
 
 <body>
-    <main id="mainPage" style="">
-        <div class="icon" id="trashIcon" style="top: 10px;"><img src="./assets/trash.png" alt="" srcset="">
+    <main id="mainPage" style="display: none;">
+        <div class="icon" id="trashIcon" style="top: 10px;   position: absolute;"><img src="./assets/trash.png" alt=""
+                srcset="">
             <p>Lixeira</p>
         </div>
-        <div onclick="openIe()" class="icon" id="edgeIcon" style="top: 130px;"><img src="./assets/internetExplorer.png"
-                alt="" srcset="">
+        <div onclick="openIe()" class="icon" id="edgeIcon" style="top: 130px;  position: absolute;"><img
+                src="./assets/internetExplorer.png" alt="" srcset="">
             <p>Internet<br> Explorer</p>
         </div>
 
-        <div onclick="clickMsn()" class="icon" style="top: 270px;">
+        <div onclick="clickMsn()" class="icon" style="top: 270px;  position: absolute;">
             <img src="./assets/msnLogo.png" alt="" srcset="">
             <p>MSN</p>
         </div>
 
-        <div onclick="clickText()" class="icon" style="top: 400px;">
+        <div onclick="clickText()" class="icon" style="top: 400px;  position: absolute;">
             <img src="./assets/blocoDeNotas.png" style="margin: auto; display: flex;" alt="" srcset="">
             <p style="text-align: center; font-size: 17px ;">Créditos.txt</p>
         </div>
@@ -108,7 +109,7 @@
             </div>
         </div>
 
-        <div class="window active fullscreen has-scrollbar" id="iexplorer-wiki" style="display: ;">
+        <div class="window active fullscreen has-scrollbar" id="iexplorer-wiki" style="display: none;">
             <div class="title-bar">
                 <div id="row">
                     <div class="title-bar-text"><img src="./assets/internetExplorer.png" alt="icon" id="window-icon"
@@ -329,7 +330,7 @@
         </div>
         <p id="ativarWin">Ativar o Windows<br><span>Esse projeto ainda está em construção</span></p>
     </main>
-    <div id="lockScreen" style="display: none;>
+    <div id="lockScreen">
         <div style=" margin:auto; display:flex; flex-direction:column; justify-content: center; align-items: center;">
         <img onclick="changeIt()" src="./assets/lockScreenIcon.png" id="lockScreenPicture" alt="">
         <h1 style="color: white;font-size:large; font-weight: 300;">Paulo Eduardo Konopka</h1>
